samples/_failures_safe/1761040046_2f5a8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38b92afd.c: In function ‘show_menu’:
./samples/SAFE/__tmp_38b92afd.c:133:5: error: expected declaration or statement at end of input
  133 |     printf("1. Matrix Addition\n");
      |     ^~~~~~
